--- a/css/mbr-additional.css
+++ b/css/mbr-additional.css
@@ -13,6 +13,7 @@ body {
   font-family: 'Bellota Text', display;
   font-size: 2.8rem;
   line-height: 1.1;
+  background-color: whitesmoke;
 }
 .display-2 > .mbr-iconfont {
   font-size: 3.5rem;
@@ -54,7 +55,7 @@ body {
     line-height: calc( 1.1 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.24rem;
+    font-size: 2.00rem;
     font-size: calc( 1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20)));
     line-height: calc( 1.3 * (1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20))));
   }
@@ -806,7 +807,7 @@ a {
   padding: 0;
 }
 .cid-1 .nav-link {
-  font-weight: 700;
+  font-weight: 600;
   position: relative;
 }
 .cid-1 nav.navbar {
@@ -1040,9 +1041,10 @@ a {
   background: #f8f9fb;
 }
 .cid-2 {
-  padding-top: 23rem;
-  padding-bottom: 19rem;
-  background-color: #0196e3;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  max-height: 60vh;
+  background-color: #f8fbfc;
 }
 .cid-2 .mbr-section-title {
   color: #ffffff;
